[project]
name = "autofollownunfollow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "certifi>=2025.1.31",
    "dotenv>=0.9.9",
    "multidict>=6.1.0",
    "requests>=2.32.3",
    "urllib3>=2.3.0",
]
